--- a/css/style.css
+++ b/css/style.css
@@ -112,11 +112,11 @@ table {
 	}
 
 		.logo img {
-			width: 96% !important;
+			width: 70% !important;
 			float: none !important;
-			margin-right: 0px !important;
+			margin-right: 15% !important;
 			margin-top: 0px !important;
-			margin: 2%;
+			margin-left: 15% !important;
 		}
 
 		.nav {
